--- a/src/components/alert-header/alert-header.styles.scss
+++ b/src/components/alert-header/alert-header.styles.scss
@@ -6,6 +6,10 @@
   padding: 5px 10px;
   background-color: #3b7d72;
 
+  .flag {
+    margin: 0px 10px;
+  }
+
   .message {
     color: white;
     font-weight: bold;
