--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -7,34 +7,44 @@
   background-color: black;
   font-weight: bold;
 
-  @media (max-width: 590px) {
+  @media (max-width: 700px) {
     flex-direction: column;
   }
 
   .responsive-menu {
     display: flex;
 
-    @media (max-width: 590px) {
+    @media (max-width: 700px) {
       min-width: 100%;
       flex-direction: row;
       justify-content: space-between;
     }
 
     .logo-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
       text-decoration: none;
       color: white;
       font-size: 25px;
+
+      img {
+        width: 35px;
+        height: 35px;
+        margin: 0px 5px;
+      }
     }
     .hamburger-menu {
       display: none;
-      @media (max-width: 590px) {
+      @media (max-width: 700px) {
         display: flex;
       }
     }
   }
   .options {
     margin-right: 20px;
-    @media (max-width: 590px) {
+    @media (max-width: 700px) {
       display: flex;
       flex-direction: column;
       margin-top: 10px;
@@ -47,7 +57,7 @@
       margin: 0 20px;
       text-decoration: none;
       color: white;
-      @media (max-width: 590px) {
+      @media (max-width: 700px) {
         margin: 20px 0;
       }
     }
