--- a/src/pages/home/home-page.styles.scss
+++ b/src/pages/home/home-page.styles.scss
@@ -7,6 +7,10 @@
     flex-direction: column;
     margin: 20px 50px;
 
+    @media (max-width: 780px) {
+      margin: 20px 10px;
+    }
+
     .section-heading {
       display: flex;
       flex-direction: row;
@@ -14,6 +18,10 @@
       font-size: 30px;
       font-weight: bolder;
       padding: 30px;
+
+      @media (max-width: 620px) {
+        padding: 10px;
+      }
 
       a {
         text-decoration: none;
@@ -31,9 +39,16 @@
 
     .section-content {
       margin: 10px 30px;
+
+      @media (max-width: 780px) {
+        margin: 10px 5px;
+      }
     }
 
     .section-action {
+      display: flex;
+      justify-content: center;
+      margin: 50px 0px 10px 0px;
       a {
         text-decoration: none;
         color: black;
