--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -25,7 +25,7 @@
     .options {
       display: flex;
       flex-direction: column;
-      align-items: start;
+      align-items: flex-start;
 
       @media (max-width: 590px) {
         margin: 20px 0px 20px 0px;
