--- a/src/pages/news/news-page.styles.scss
+++ b/src/pages/news/news-page.styles.scss
@@ -3,4 +3,21 @@
   flex-direction: column;
   align-items: center;
   margin: 25px 50px;
+
+  @media (max-width: 780px) {
+    margin: 25px 10px;
+  }
+
+  .section {
+    .section-heading {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      font-size: 30px;
+      font-weight: bolder;
+      padding: 20px 20px 10px 20px;
+      color: black;
+      margin-bottom: 25px;
+    }
+  }
 }
