--- a/src/pages/stats/stats.styles.scss
+++ b/src/pages/stats/stats.styles.scss
@@ -1,5 +1,17 @@
 .stats {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  .section {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 50px;
+    width: 80%;
+
+    @media (max-width: 780px) {
+      margin: 20px 10px;
+    }
+  }
 }
