--- a/src/pages/what-is-covid/what-is-covid.styles.scss
+++ b/src/pages/what-is-covid/what-is-covid.styles.scss
@@ -7,6 +7,10 @@
     flex-direction: column;
     margin: 0px 50px;
 
+    @media (max-width: 1120px) {
+      margin: 0px 15px;
+    }
+
     .section-heading {
       display: flex;
       flex-direction: row;
@@ -20,8 +24,35 @@
     .section-content {
       margin: 10px 30px;
 
+      &.precaution {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+        @media (max-width: 600px) {
+          margin: 10px 15px;
+          flex-direction: column;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        @media (min-width: 600px) {
+          @media (max-width: 1120px) {
+            margin: 10px 15px;
+            flex-direction: column;
+            img {
+              width: 80%;
+              height: 80%;
+            }
+          }
+        }
+      }
+
       .text {
         text-align: justify;
+        margin: 15px 0px;
+        padding: 0px 10px;
       }
     }
 
