--- a/src/components/counter-card/counter-card.styles.scss
+++ b/src/components/counter-card/counter-card.styles.scss
@@ -1,21 +1,41 @@
 .counter-content {
   height: 100%;
   width: 100%;
+
   .counter-tag {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 20%;
     font-weight: bold;
     padding: 5px;
+    font-size: 18px;
+    @media (max-width: 620px) {
+      font-size: 14px;
+    }
+
+    @media (min-width: 620px) {
+      @media (max-width: 880px) {
+        font-size: 16px;
+      }
+    }
   }
   .counter-value {
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 80%;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
 
-    @media (max-width: 880px) {
-      font-size: 35px;
+    @media (max-width: 620px) {
+      font-size: 20px;
+    }
+
+    @media (min-width: 620px) {
+      @media (max-width: 880px) {
+        font-size: 30px;
+      }
     }
   }
 }
