--- a/src/components/stats-overview/stats-overview.styles.scss
+++ b/src/components/stats-overview/stats-overview.styles.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: center;
 
-  @media (max-width: 620px) {
+  @media (max-width: 850px) {
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -16,14 +16,14 @@
     align-items: flex-start;
     width: 30%;
 
-    @media (max-width: 620px) {
+    @media (max-width: 850px) {
       align-items: center;
       margin-bottom: 15px;
       width: 80%;
     }
 
-    @media (min-width: 620px) {
-      @media (max-width: 880px) {
+    @media (min-width: 850px) {
+      @media (max-width: 1230px) {
         width: 40%;
       }
     }
@@ -35,7 +35,7 @@
     .country-picker {
       width: 100%;
 
-      @media (max-width: 620px) {
+      @media (max-width: 850px) {
         display: flex;
         justify-content: center;
       }
@@ -45,8 +45,9 @@
   .counters {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     width: 70%;
-    @media (max-width: 620px) {
+    @media (max-width: 850px) {
       align-items: center;
       width: 100%;
     }
