--- a/src/components/stats-overview/stats-overview.styles.scss
+++ b/src/components/stats-overview/stats-overview.styles.scss
@@ -36,6 +36,7 @@
       width: 100%;
 
       @media (max-width: 850px) {
+        width: 80%;
         display: flex;
         justify-content: center;
       }
